src/App.css
/* ... */
.folio-item__title {
  color: #ffffff;
  font-weight: 400;
  font-size: 2.1rem;
  line-height: 1.333;
  margin: 0;
}
.folio-item__cat {
  color: rgba(255, 255, 255, 0.5);
  font-family: 'Gothic A1', sans-serif;
  font-size: 1.4rem;
  margin-bottom: 0;
}
.folio-item__project-link {
  z-index: 2;
  display: block;
  font-family: 'Gothic A1', sans-serif;
  font-weight: 400;
  font-size: 1.2rem;
  line-height: 2rem;
  color: #000000;
  background-color: #ffffff;
  padding: 0.6rem 1.2rem;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: translate3d(-100%, 0, 0);
  transform: translate3d(-100%, 0, 0);
  -webkit-transition: all, 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
  transition: all, 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
  position: absolute;
  bottom: 3.9rem;
  left: 3rem;
}
.folio-item__project-link::before {
  display: block;
  content: '';
  height: 1px;
  width: 3rem;
  background-color: rgba(255, 255, 255, 0.3);
  position: absolute;
  top: 50%;
  left: -3rem;
}
.folio-item__project-link:hover,
.folio-item__project-link:focus,
.folio-item__project-link:active {
  background-color: #f9861a;
  color: #ffffff;
}

.folio-item:hover .folio-item__thumb a::before {
  opacity: 1;
  visibility: visible;
}
.folio-item:hover .folio-item__thumb a::after {
  opacity: 1;
  visibility: visible;
  -webkit-transform: scale(1);
  transform: scale(1);
}
.folio-item:hover .folio-item__project-link {
  opacity: 1;
  visibility: visible;
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}
.folio-item:hover .folio-item__info {
  opacity: 1;
  visibility: visible;
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}

@media screen and (max-width: 1200px) {
  .s-portfolio::before {
    display: none;
  }

  .folio-item__thumb a::after {
    font-size: 2rem;
  }

  .folio-item__title {
    font-size: 1.8rem;
  }

  .folio-item__cat {
    font-size: 1.2rem;
  }
}
@media screen and (max-width: 800px) {
  .s-portfolio {
    padding-top: 8rem;
  }

  .folio-item__thumb a::after {
    font-size: 3rem;
  }

  .folio-item__title {
    font-size: 2.1rem;
  }

  .folio-item__cat {
    font-size: 1.4rem;
  }
}
@media screen and (max-width: 600px) {
  .folio-item__thumb a::after {
    font-size: 2rem;
  }

  .folio-item__title {
    font-size: 1.8rem;
  }

  .folio-item__cat {
    font-size: 1.2rem;
  }
}

.s-testimonials {
  padding-top: 8rem;
  padding-bottom: 16rem;
  background-color: #ffffff;
}
.testimonial-slider {
  position: relative;
}
.testimonial-slider p {
  font-family: 'Gothic A1', sans-serif;
  font-weight: 400;
  font-size: 1.7rem;
  line-height: 1.882;
  color: #000000;
}
.testimonial-slider__slide {
  position: relative;
  padding: 0 20px;
}
.testimonial-slider__author {
  min-height: 7.2rem;
  margin-top: 4rem;
  padding-left: 8.8rem;
  position: relative;
}
.testimonial-slider__avatar {
  width: 6.8rem;
  height: 6.8rem;
  border-radius: 100%;
  outline: none;
  position: absolute;
  top: 0;
  left: 0;
}
.testimonial-slider__cite {
  display: block;
}
.testimonial-slider__cite strong,
.testimonial-slider__cite span {
  font-family: 'Gothic A1', sans-serif;
  font-style: normal;
}
.testimonial-slider__cite strong {
  font-size: 1.6rem;
  line-height: 1.75;
}
.testimonial-slider__cite span {
  display: block;
  font-size: 1.5rem;
  line-height: 1.333;
  color: rgba(0, 0, 0, 0.7);
}

@media screen and (max-width: 800px) {
  .testimonial-slider__slide {
    text-align: center;
  }

  .testimonial-slider__author {
    display: inline-block;
  }
}
@media screen and (max-width: 400px) {
  .testimonial-slider__author {
    margin: 0;
    padding: 0;
  }

  .testimonial-slider__avatar {
    position: static;
    margin-bottom: 2.4rem;
  }
}

.s-footer {
  padding-top: 8rem;
  padding-bottom: 2rem;
  position: relative;
}
.s-footer .right-vert-line {
  background-color: #f9861a;
}
.s-footer__bottom {
  font-family: 'Gothic A1', sans-serif;
  color: rgba(255, 255, 255, 0.5);
  margin-top: 1rem;
}
.s-footer .footer-email-us .btn:hover,
.s-footer .footer-email-us .btn:focus {
  background-color: #ffffff;
  border-color: #ffffff;
  color: #000000;
}
.s-footer .footer-contacts {
  margin-top: 1rem;
  margin-left: 8.33333%;
}

.footer-contact-block {
  font-family: 'Gothic A1', sans-serif;
  font-weight: 200;
  font-size: 2rem;
  line-height: 1.2;
}
.footer-contact-block a {
  color: #ffffff;
}
.footer-contact-block a:hover,
.footer-contact-block a:focus {
  color: #f9861a;
}
.footer-contact-block__content,
.footer-contact-block__list li {
  padding: 0.8rem 0;
}
.footer-contact-block__list {
  list-style: none;
  margin-top: 0.4rem;
  margin-left: 0;
}
.footer-contact-block__list li {
  padding-left: 0;
}
.footer-contact-block__header {
  color: rgba(255, 255, 255, 0.4);
  margin: 0;
}


.ss-copyright {
  z-index: 2;
  position: relative;
}
.ss-copyright a {
  color: #ffffff;
}
.ss-copyright a:hover,
.ss-copyright a:focus {
  color: #f9861a;
}
.ss-copyright span {
  font-size: 1.5rem;
  display: inline-block;
}
.ss-copyright span::after {
  content: '|';
  display: inline-block;
  padding: 0 0.8rem 0 1rem;
  color: rgba(255, 255, 255, 0.1);
}
.ss-copyright span:last-child::after {
  display: none;
}

.ss-go-top {
  z-index: 2;
  /*opacity: 0;
  visibility: hidden;
  -webkit-transform: translate3d(0, 200%, 0);
  transform: translate3d(0, 200%, 0);*/
  -webkit-transition: all 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
  transition: all 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
  position: fixed;
  bottom: 10rem;
  right: 8rem;
}
.ss-go-top a {
  text-decoration: none;
  border: 0 none;
  display: block;
  height: 6.4rem;
  width: 6.4rem;
  border-radius: 50%;
  background-color: #000000;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  position: relative;
}
.ss-go-top a:hover,
.ss-go-top a:focus {
  background-color: #f9861a;
}
/* ... */

